--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "check-password-strength": "^2.0.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "mssql": "^9.0.1",
+    "redoc": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "sucrase": "^3.29.0",
     "swagger-ui-express": "^4.6.0",
