--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-standard-with-typescript": "^24.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "git-commit-msg-linter": "^5.0.4"
   }
 }
